--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,8 @@ body {
 
 /* FAQ Section */
 #faq {
-  padding: 2rem;
+  padding: 0.5rem;
+  padding-bottom: 2rem;
   margin-top: 5rem;
   background-color: #1a1a1a;
   text-align: center;
@@ -299,7 +300,7 @@ body {
   justify-content: center;
   margin-bottom: 1rem;
   gap: 0.3rem;
-  width: 80%;
+  width: 100%;
 }
 #faq .toggle-container button {
   padding: 0.5rem 1rem;
@@ -314,11 +315,10 @@ body {
 }
 #faq .content-box {
   display: none;
-  width: 100%;
   margin: 0 auto;
   background: #282828;
+  padding: 1.5rem;
   border-radius: 8px;
-  padding: 0; /* Remove padding for small screens */
 }
 #faq .content-box h3 {
   letter-spacing: 0.1rem;
@@ -326,7 +326,6 @@ body {
 }
 #faq .content-box p {
   line-height: 140%;
-  text-align: center;
 }
 #faq .content-box.active {
   display: block;
@@ -336,8 +335,8 @@ body {
   padding: 2rem;
   background-color: #1a1a1a;
   color: #f1f1f1;
+  max-width: 600px;
   margin: 0 auto;
-  width: 100%;  
 }
 #faq .faq-section h2 {
   text-align: center;
@@ -350,7 +349,7 @@ body {
   position: relative; /* Position for ripple effect */
   width: 100%;
   padding: 1rem;
-  text-align: center;
+  text-align: left;
   background: #333;
   color: #ef9e65;
   font-size: 1rem;
@@ -591,29 +590,3 @@ footer .copyright {
 }
 
 /*# sourceMappingURL=styles.css.map */
-.et-slide.parallax {
-  background-image: url('Assets/nexus-logo-full.png'); /* Add the image path */
-  background-attachment: fixed; /* Enables the parallax effect */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.et-slide.parallax::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.815); /* Adjust opacity and color */
-  z-index: -1;
-}
-
-.et-slide.fixed-height {
-  height: 100vh;
-}
-
-#details {
-  position: relative; /* Ensures content stays above the overlay */
-  z-index: 2;
-}
