--- a/styles.css
+++ b/styles.css
@@ -317,8 +317,9 @@ body {
   display: none;
   margin: 0 auto;
   background: #282828;
-  padding: 1.5rem;
   border-radius: 8px;
+  width: 100%;
+  padding: 0.5rem;
 }
 #faq .content-box h3 {
   letter-spacing: 0.1rem;
@@ -335,8 +336,8 @@ body {
   padding: 2rem;
   background-color: #1a1a1a;
   color: #f1f1f1;
-  max-width: 600px;
   margin: 0 auto;
+  width: 100%;
 }
 #faq .faq-section h2 {
   text-align: center;
