--- a/styles_main.scss
+++ b/styles_main.scss
@@ -187,7 +187,8 @@
     
     /* FAQ Section */
     #faq {
-        padding: 2rem;
+        padding: 0.5rem;
+        padding-bottom: 2rem;
         margin-top: 5rem;
         background-color: #1a1a1a;
         text-align: center;
@@ -200,7 +201,7 @@
         justify-content: center;
         margin-bottom: 1rem;
         gap: 0.3rem;
-        width: 80%;
+        width: 100%;
         button {
             padding: 0.5rem 1rem;
             border: none;
@@ -216,11 +217,11 @@
 
         .content-box {
                 display: none;
-                width: 80%;
                 margin: 0 auto;
                 background: #282828;
-                padding: 1.5rem;
                 border-radius: 8px;
+                width: 100%;
+                padding: 0.5rem;
               
 
         h3 {
@@ -242,8 +243,8 @@
     padding: 2rem;
     background-color: #1a1a1a;
     color: #f1f1f1;
-    max-width: 600px;
     margin: 0 auto;
+    width: 100%;
   }
   
   .faq-section h2 {
