--- a/_navbar.scss
+++ b/_navbar.scss
@@ -1,6 +1,6 @@
 body {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #1c1c1c; 
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #1c1c1c;
   color: #ffffff;
 }
 
@@ -16,16 +16,16 @@ a {
   align-items: center;
   text-align: center;
   padding: 0 2em;
-  
+
   h1 {
     font-size: 2rem;
-    color: #ef9e65;
+    color: #5ccae5; // Primary color for headings
     letter-spacing: 0.5rem;
   }
-  
+
   h3 {
     font-size: 1rem;
-    color: #aaa;
+    color: #88d9ef; // Lighter shade of the primary color
     letter-spacing: 0.2rem;
   }
 }
@@ -33,7 +33,7 @@ a {
 .et-hero-tabs-container {
   display: flex;
   flex-direction: row;
-  position: absolute; /* Start positioned below the hero section */
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 70px;
@@ -43,8 +43,8 @@ a {
   transition: top 0.3s ease;
 
   &--top {
-    position: fixed; 
-    top: 0;  
+    position: fixed;
+    top: 0;
   }
 }
 
@@ -53,13 +53,13 @@ a {
   justify-content: center;
   align-items: center;
   flex: 1;
-  color: #ef9e65; 
+  color: #5ccae5; // Tab text color
   transition: all 0.5s ease;
   letter-spacing: 0.1rem;
 
   &:hover {
     color: #ffffff; // White hover effect
-    background: rgba(241, 181, 102, 0.2); 
+    background: rgba(92, 202, 229, 0.2); // Cyan hover background
     transition: all 0.5s ease;
   }
 }
@@ -69,7 +69,7 @@ a {
   bottom: 0;
   width: 0;
   height: 3px;
-  background: #ef9e65;
+  background: #5ccae5; // Tab slider color
   transition: left 0.3s ease;
 }
 
@@ -103,5 +103,4 @@ a {
     right: 10px;
     z-index: 10;
   }
-
 }
